--- a/product-detail.html
+++ b/product-detail.html
@@ -23,9 +23,9 @@
       <main
         class="flex-1 flex flex-col bg-white dark:bg-gray-800 rounded-lg border border-muted dark:border-gray-700 overflow-y-scroll p-4 gap-y-2"
       >
-        <div class="flex justify-between">
+        <div class="flex flex-col md:flex-row justify-between">
           <h1 class="text-2xl font-[560] text-nowrap">Acme Prism T-Shirt</h1>
-          <div class="flex items-center space-x-2">
+          <div class="flex items-center justify-center md:justify-start space-x-2">
             <!-- Edit Button -->
             <button class="bg-primary px-3.5 py-2 h-full flex items-center gap-2 text-sm rounded-md">
               <svg
@@ -170,7 +170,7 @@
 
             <!-- Item description -->
             <div class="flex-1 space-y-4">
-              <div class="flex gap-4 [&_svg]:w-6 [&_svg]:h-6 [&_svg]:text-gray-400">
+              <div class="flex overflow-x-scroll gap-4 [&_svg]:w-6 [&_svg]:h-6 [&_svg]:text-gray-400">
                 <div class="flex-1 p-2 bg-muted outline outline-1 outline-gray-200 rounded-lg items-start py-4">
                   <div class="flex gap-4">
                     <svg
@@ -275,7 +275,7 @@
               </div>
               <div class="flex flex-col gap-4">
                 <div class="p-4 outline rounded-lg outline-1 outline-gray-200">
-                  <div class="grid grid-cols-3 space-x-4">
+                  <div class="grid grid-cols-1 lg:grid-cols-3 lg:space-x-4">
                     <div class="space-y-8 col-span-2">
                       <div>
                         <h2 class="font-bold text-gray-800 mb-2">Description:</h2>
@@ -294,7 +294,7 @@
                         </ul>
                       </div>
                     </div>
-                    <table class="[&_tr]:border [&_tr]:border-gray-200 h-fit [&_td]:p-2 text-sm">
+                    <table class="[&_tr]:border [&_tr]:border-gray-200 h-fit [&_td]:p-2 text-sm mt-4">
                       <tr>
                         <td class="font-bold">Category</td>
                         <td class="text-right">T-Shirt</td>
@@ -690,10 +690,10 @@
                     </form>
                   </template>
                 </div>
-                <div class="grid grid-cols-3 space-x-4">
-                  <div class="flex flex-col gap-4 col-span-2" id="review-list"></div>
+                <div class="grid grid-cols-1 gap-y-4 lg:grid-cols-3 lg:space-x-4">
+                  <div class="flex flex-col gap-4 col-span-2 order-2 lg:order-1" id="review-list"></div>
                   <!-- Review summary -->
-                  <div class="rounded-lg outline outline-1 outline-gray-200 overflow-hidden h-fit">
+                  <div class="rounded-lg outline outline-1 outline-gray-200 overflow-hidden h-fit order-1 lg:order-2">
                     <div class="p-4 bg-muted flex flex-col 2xl:flex-row justify-between items-center">
                       <div
                         class="flex items-center gap-1 text-orange-400 [&_svg]:w-4 [&_svg]:h-4 [&_svg]:stroke-orange-400"
